--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,50 @@
 @import url(variables.css)
+
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    text-decoration: none;
+    font-family: Poppins-Regular;
+
+}
+header{
+
+    width: 100%;
+    height: 10%;
+    border: 1px solid black;
+    overflow-y: hidden;
+    overflow-x: scroll;
+    background-color: var(--color-black);
+    
+
+}
+header ul{
+
+    display: flex;
+    gap: 1vw;
+    font-size: 1vw;
+    width: 100px;
+
+}
+
+header ul li{
+
+    list-style: none;
+    width: 100px;
+    border: 1px solid black;
+    width: 70px;
+    font-family: Poppins-Regular;
+    width: 100px;
+
+}
+
+header ul li a{
+
+    width: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    outline: none;
+    text-decoration: none;
+}
