--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,15 @@
-@import url(variables.css)
+@import url(/css/variables.css)
 
 *{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
     text-decoration: none;
-    font-family: Poppins-Regular;
+    font-family: Regular;
 
 }
+
+
 header{
 
     width: 100%;
@@ -15,7 +17,7 @@ header{
     border: 1px solid black;
     overflow-y: hidden;
     overflow-x: scroll;
-    background-color: var(--color-black);
+    font-family: Regular;
     
 
 }
@@ -25,7 +27,7 @@ header ul{
     gap: 1vw;
     font-size: 1vw;
     width: 100px;
-
+    
 }
 
 header ul li{
@@ -34,8 +36,8 @@ header ul li{
     width: 100px;
     border: 1px solid black;
     width: 70px;
-    font-family: Poppins-Regular;
     width: 100px;
+
 
 }
 
@@ -48,3 +50,79 @@ header ul li a{
     outline: none;
     text-decoration: none;
 }
+
+.products{
+
+    display: grid;
+    grid-template: repeat(4, 1fr) / 1fr;
+    height: 100%;
+    padding: 30px;
+    gap: 2vh;
+
+}
+
+.products .product{
+
+    display: grid;
+    grid-template: 1fr / 300px repeat(2, 1fr);
+    height: 80vh;
+    gap: 1vw;
+    padding-block: 2vh;
+    border: 1px solid black;  
+}
+.products .product .gallery__Products{
+
+    display: grid;
+    gap: 1vh;
+    padding-inline: 1vw;
+
+   
+}
+
+.products .product .gallery__Products .photo{ 
+
+    border: 1px solid black;
+    grid-template: repeat(3, 1fr) / 1fr;
+    height: 18vh;
+    background-color: #fff;
+}
+
+.products .product .main__Product{
+
+    border: 1px solid black;
+    background-color: #fff;
+    height: 100%;
+
+}
+
+.description__Product{
+
+    border: 1px solid black;
+    font-size: 1.5vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    height: 100%;
+}
+
+.description__Product button{
+
+    width: 45%;
+    height: 7vh;
+    font-size: 1.5vw;
+}
+.description__Product .cost{
+
+    display: flex;
+    gap: 20px;
+    align-items: center;
+
+}
+
+
+
+.description__Product .cost h3{ 
+
+    font-size: 3vw;
+}
+
