--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,6 @@ header ul li{
     list-style: none;
     width: 100px;
     width: 70px;
-    width: 100px;
 
 
 }
@@ -176,6 +175,25 @@ header ul li a{
     color: #fff
 }
 
+.navegador .gallery__detalles{
+
+    height: 20vh;
+    border: 1px solid white;
+    width: 90%;
+    overflow-y: scroll;
+    display: grid;
+    grid-template: repeat(5, 1fr) / 1fr
+
+
+}
+
+.detalle{
+
+    border: 1px solid white;
+    height: 10vh;
+    
+}
+
 .checkbtn {
     display: block;
     position: absolute;
@@ -187,3 +205,34 @@ header ul li a{
     padding-block: 20px;
     height: 45vh;
 }
+
+.navegador h2{
+
+   font-size: 2.5vw; 
+}
+
+.navegador .total{
+
+    border: 1px solid white;
+    width: 85%;
+    margin-top: 10px;
+    font-size: 1vw;
+    display: flex;
+    padding: 1vw;
+    gap: 25vw;
+    align-items: center;
+
+}
+
+.navegador .precios{
+    width: 100%;
+    padding: 1vw
+}
+
+.navegador .precios button{
+
+    background-color: #474747;
+    border: 1px solid #474747;
+    padding: 15px;
+}
+
